--- a/app/src/main/res/layout/activity_otp_verif.xml
+++ b/app/src/main/res/layout/activity_otp_verif.xml
@@ -11,12 +11,12 @@
         android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="128dp"
         android:text="@string/otp_verification"
         android:textSize="18sp"
-        android:layout_marginTop="32dp"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
         android:id="@+id/llOtp"
@@ -92,11 +92,11 @@
         android:id="@+id/btnVerify"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/verifikasi"
         android:layout_marginTop="24dp"
-        app:layout_constraintTop_toBottomOf="@+id/llOtp"
+        android:text="@string/verifikasi"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/llOtp" />
 
     <Button
         android:id="@+id/btnResendOtp"
