--- a/app/src/main/res/layout/products_card.xml
+++ b/app/src/main/res/layout/products_card.xml
@@ -5,7 +5,8 @@
     android:id="@+id/card_view"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_gravity="center"
+    android:layout_marginHorizontal="12dp"
+    android:layout_marginVertical="8dp"
     card_view:cardCornerRadius="4dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -15,8 +16,8 @@
 
         <ImageView
             android:id="@+id/profileImageView"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
             android:layout_marginHorizontal="10dp"
             android:layout_marginVertical="10dp"
             card_view:layout_constraintStart_toStartOf="parent"
