--- a/app/src/main/res/layout/activity_add_product.xml
+++ b/app/src/main/res/layout/activity_add_product.xml
@@ -4,17 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".ui.product.AddProductActivity"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/main"
-    android:background="@drawable/gradient_background">
+    android:layout_height="wrap_content"
+    android:id="@+id/mainAdd"
+    android:background="#C5FFF8"
+    android:focusableInTouchMode="true"
+    android:focusable="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:paddingBottom="100dp">
 
         <com.google.android.material.materialswitch.MaterialSwitch
             android:text="@string/aktivasi"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:id="@+id/feature_switch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -45,6 +48,7 @@
             android:layout_marginEnd="4dp"
             android:layout_marginVertical="8dp"
             android:text="Select from Gallery"
+            android:backgroundTint="@color/blue"
             app:layout_constraintEnd_toStartOf="@+id/cameraButton"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toTopOf="@id/nameEditTextLayout"/>
@@ -57,6 +61,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginVertical="8dp"
             android:text="Take a Picture"
+            android:backgroundTint="@color/blue"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/galleryButton"
             app:layout_constraintBottom_toTopOf="@id/nameEditTextLayout"/>
@@ -157,6 +162,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:text="Submit"
+            android:backgroundTint="@color/blue"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" />
