--- a/app/src/main/res/layout/fragment_product.xml
+++ b/app/src/main/res/layout/fragment_product.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.product.ProductFragment">
+    tools:context=".ui.product.ProductFragment"
+    android:background="#C5FFF8">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_products"
