--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="blue">#1D61E7</color>
+    <color name="blue">#4D869C</color>
+    <color name="blueDark">#3572EF</color>
     <color name="pink">#F06292</color>
     <color name="navi">#2D3D4F</color>
 </resources>
