--- a/app/src/main/res/layout/activity_new_password.xml
+++ b/app/src/main/res/layout/activity_new_password.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.newPassword.NewPasswordActivity"
-    android:background="#C5FFF8">
+    android:background="@color/md_theme_tertiaryContainer">
 
     <ImageView
         android:id="@+id/logoImageView"
@@ -29,7 +29,6 @@
         android:layout_marginTop="164dp"
         android:layout_marginEnd="32dp"
         android:text="Password Baru"
-        android:textColor="@color/black"
         android:textSize="38sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -112,7 +111,6 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Kirim"
-        android:backgroundTint="@color/blue"
         app:layout_constraintTop_toBottomOf="@id/otpEditTextLayout"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
