--- a/app/src/main/res/layout/products_card.xml
+++ b/app/src/main/res/layout/products_card.xml
@@ -2,6 +2,7 @@
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    style="?materialCardViewElevatedStyle"
     android:id="@+id/card_view"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -10,16 +11,13 @@
     card_view:cardCornerRadius="4dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="8dp">
+        android:layout_width="150dp"
+        android:layout_height="wrap_content">
 
         <ImageView
             android:id="@+id/profileImageView"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:layout_marginHorizontal="10dp"
-            android:layout_marginVertical="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
             card_view:layout_constraintStart_toStartOf="parent"
             card_view:layout_constraintTop_toTopOf="parent"
             card_view:layout_constraintEnd_toEndOf="parent"
@@ -32,6 +30,7 @@
             android:layout_toEndOf="@id/profileImageView"
             android:textSize="16sp"
             android:textStyle="bold"
+            android:layout_marginHorizontal="10dp"
             android:layout_marginVertical="10dp"
             card_view:layout_constraintEnd_toEndOf="@+id/profileImageView"
             card_view:layout_constraintStart_toStartOf="@+id/profileImageView"
@@ -44,8 +43,8 @@
             android:layout_height="wrap_content"
             android:layout_marginVertical="10dp"
             card_view:layout_constraintBottom_toBottomOf="parent"
-            card_view:layout_constraintEnd_toEndOf="@+id/profileImageView"
-            card_view:layout_constraintStart_toStartOf="@+id/profileImageView"
+            card_view:layout_constraintEnd_toEndOf="@+id/nameTextView"
+            card_view:layout_constraintStart_toStartOf="@+id/nameTextView"
             card_view:layout_constraintTop_toBottomOf="@+id/nameTextView"
             tools:text="Harga" />
     </androidx.constraintlayout.widget.ConstraintLayout>
