--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,14 +1,144 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
-    <color name="blue">#4D869C</color>
-    <color name="blueDark">#3572EF</color>
-    <color name="pink">#F06292</color>
-    <color name="navi">#2D3D4F</color>
+    <color name="md_theme_primary">#15576B</color>
+    <color name="md_theme_onPrimary">#FFFFFF</color>
+    <color name="md_theme_primaryContainer">#427C92</color>
+    <color name="md_theme_onPrimaryContainer">#FFFFFF</color>
+    <color name="md_theme_secondary">#4D616A</color>
+    <color name="md_theme_onSecondary">#FFFFFF</color>
+    <color name="md_theme_secondaryContainer">#D4EAF5</color>
+    <color name="md_theme_onSecondaryContainer">#394D56</color>
+    <color name="md_theme_tertiary">#2F6762</color>
+    <color name="md_theme_onTertiary">#FFFFFF</color>
+    <color name="md_theme_tertiaryContainer">#D0FFF9</color>
+    <color name="md_theme_onTertiaryContainer">#225C57</color>
+    <color name="md_theme_error">#BA1A1A</color>
+    <color name="md_theme_onError">#FFFFFF</color>
+    <color name="md_theme_errorContainer">#FFDAD6</color>
+    <color name="md_theme_onErrorContainer">#410002</color>
+    <color name="md_theme_background">#F8F9FB</color>
+    <color name="md_theme_onBackground">#191C1D</color>
+    <color name="md_theme_surface">#F8F9FB</color>
+    <color name="md_theme_onSurface">#191C1D</color>
+    <color name="md_theme_surfaceVariant">#DCE4E8</color>
+    <color name="md_theme_onSurfaceVariant">#40484C</color>
+    <color name="md_theme_outline">#70787C</color>
+    <color name="md_theme_outlineVariant">#C0C8CC</color>
+    <color name="md_theme_scrim">#000000</color>
+    <color name="md_theme_inverseSurface">#2E3132</color>
+    <color name="md_theme_inverseOnSurface">#F0F1F2</color>
+    <color name="md_theme_inversePrimary">#96CFE7</color>
+    <color name="md_theme_primaryFixed">#BAEAFF</color>
+    <color name="md_theme_onPrimaryFixed">#001F29</color>
+    <color name="md_theme_primaryFixedDim">#96CFE7</color>
+    <color name="md_theme_onPrimaryFixedVariant">#034D61</color>
+    <color name="md_theme_secondaryFixed">#D0E6F1</color>
+    <color name="md_theme_onSecondaryFixed">#091E26</color>
+    <color name="md_theme_secondaryFixedDim">#B4CAD4</color>
+    <color name="md_theme_onSecondaryFixedVariant">#364A52</color>
+    <color name="md_theme_tertiaryFixed">#B4EDE7</color>
+    <color name="md_theme_onTertiaryFixed">#00201E</color>
+    <color name="md_theme_tertiaryFixedDim">#98D1CB</color>
+    <color name="md_theme_onTertiaryFixedVariant">#124F4B</color>
+    <color name="md_theme_surfaceDim">#D9DADC</color>
+    <color name="md_theme_surfaceBright">#F8F9FB</color>
+    <color name="md_theme_surfaceContainerLowest">#FFFFFF</color>
+    <color name="md_theme_surfaceContainerLow">#F2F4F5</color>
+    <color name="md_theme_surfaceContainer">#EDEEF0</color>
+    <color name="md_theme_surfaceContainerHigh">#E7E8EA</color>
+    <color name="md_theme_surfaceContainerHighest">#E1E2E4</color>
+    <color name="md_theme_primary_mediumContrast">#00495D</color>
+    <color name="md_theme_onPrimary_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_primaryContainer_mediumContrast">#427C92</color>
+    <color name="md_theme_onPrimaryContainer_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_secondary_mediumContrast">#32464E</color>
+    <color name="md_theme_onSecondary_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryContainer_mediumContrast">#637881</color>
+    <color name="md_theme_onSecondaryContainer_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_tertiary_mediumContrast">#0B4B47</color>
+    <color name="md_theme_onTertiary_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryContainer_mediumContrast">#477E79</color>
+    <color name="md_theme_onTertiaryContainer_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_error_mediumContrast">#8C0009</color>
+    <color name="md_theme_onError_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_errorContainer_mediumContrast">#DA342E</color>
+    <color name="md_theme_onErrorContainer_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_background_mediumContrast">#F8F9FB</color>
+    <color name="md_theme_onBackground_mediumContrast">#191C1D</color>
+    <color name="md_theme_surface_mediumContrast">#F8F9FB</color>
+    <color name="md_theme_onSurface_mediumContrast">#191C1D</color>
+    <color name="md_theme_surfaceVariant_mediumContrast">#DCE4E8</color>
+    <color name="md_theme_onSurfaceVariant_mediumContrast">#3C4448</color>
+    <color name="md_theme_outline_mediumContrast">#586064</color>
+    <color name="md_theme_outlineVariant_mediumContrast">#747C80</color>
+    <color name="md_theme_scrim_mediumContrast">#000000</color>
+    <color name="md_theme_inverseSurface_mediumContrast">#2E3132</color>
+    <color name="md_theme_inverseOnSurface_mediumContrast">#F0F1F2</color>
+    <color name="md_theme_inversePrimary_mediumContrast">#96CFE7</color>
+    <color name="md_theme_primaryFixed_mediumContrast">#427C92</color>
+    <color name="md_theme_onPrimaryFixed_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_primaryFixedDim_mediumContrast">#266378</color>
+    <color name="md_theme_onPrimaryFixedVariant_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryFixed_mediumContrast">#637881</color>
+    <color name="md_theme_onSecondaryFixed_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryFixedDim_mediumContrast">#4B5F68</color>
+    <color name="md_theme_onSecondaryFixedVariant_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryFixed_mediumContrast">#477E79</color>
+    <color name="md_theme_onTertiaryFixed_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryFixedDim_mediumContrast">#2C6560</color>
+    <color name="md_theme_onTertiaryFixedVariant_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceDim_mediumContrast">#D9DADC</color>
+    <color name="md_theme_surfaceBright_mediumContrast">#F8F9FB</color>
+    <color name="md_theme_surfaceContainerLowest_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceContainerLow_mediumContrast">#F2F4F5</color>
+    <color name="md_theme_surfaceContainer_mediumContrast">#EDEEF0</color>
+    <color name="md_theme_surfaceContainerHigh_mediumContrast">#E7E8EA</color>
+    <color name="md_theme_surfaceContainerHighest_mediumContrast">#E1E2E4</color>
+    <color name="md_theme_primary_highContrast">#002632</color>
+    <color name="md_theme_onPrimary_highContrast">#FFFFFF</color>
+    <color name="md_theme_primaryContainer_highContrast">#00495D</color>
+    <color name="md_theme_onPrimaryContainer_highContrast">#FFFFFF</color>
+    <color name="md_theme_secondary_highContrast">#10252D</color>
+    <color name="md_theme_onSecondary_highContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryContainer_highContrast">#32464E</color>
+    <color name="md_theme_onSecondaryContainer_highContrast">#FFFFFF</color>
+    <color name="md_theme_tertiary_highContrast">#002725</color>
+    <color name="md_theme_onTertiary_highContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryContainer_highContrast">#0B4B47</color>
+    <color name="md_theme_onTertiaryContainer_highContrast">#FFFFFF</color>
+    <color name="md_theme_error_highContrast">#4E0002</color>
+    <color name="md_theme_onError_highContrast">#FFFFFF</color>
+    <color name="md_theme_errorContainer_highContrast">#8C0009</color>
+    <color name="md_theme_onErrorContainer_highContrast">#FFFFFF</color>
+    <color name="md_theme_background_highContrast">#F8F9FB</color>
+    <color name="md_theme_onBackground_highContrast">#191C1D</color>
+    <color name="md_theme_surface_highContrast">#F8F9FB</color>
+    <color name="md_theme_onSurface_highContrast">#000000</color>
+    <color name="md_theme_surfaceVariant_highContrast">#DCE4E8</color>
+    <color name="md_theme_onSurfaceVariant_highContrast">#1D2529</color>
+    <color name="md_theme_outline_highContrast">#3C4448</color>
+    <color name="md_theme_outlineVariant_highContrast">#3C4448</color>
+    <color name="md_theme_scrim_highContrast">#000000</color>
+    <color name="md_theme_inverseSurface_highContrast">#2E3132</color>
+    <color name="md_theme_inverseOnSurface_highContrast">#FFFFFF</color>
+    <color name="md_theme_inversePrimary_highContrast">#D3F1FF</color>
+    <color name="md_theme_primaryFixed_highContrast">#00495D</color>
+    <color name="md_theme_onPrimaryFixed_highContrast">#FFFFFF</color>
+    <color name="md_theme_primaryFixedDim_highContrast">#00313F</color>
+    <color name="md_theme_onPrimaryFixedVariant_highContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryFixed_highContrast">#32464E</color>
+    <color name="md_theme_onSecondaryFixed_highContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryFixedDim_highContrast">#1B2F37</color>
+    <color name="md_theme_onSecondaryFixedVariant_highContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryFixed_highContrast">#0B4B47</color>
+    <color name="md_theme_onTertiaryFixed_highContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryFixedDim_highContrast">#003330</color>
+    <color name="md_theme_onTertiaryFixedVariant_highContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceDim_highContrast">#D9DADC</color>
+    <color name="md_theme_surfaceBright_highContrast">#F8F9FB</color>
+    <color name="md_theme_surfaceContainerLowest_highContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceContainerLow_highContrast">#F2F4F5</color>
+    <color name="md_theme_surfaceContainer_highContrast">#EDEEF0</color>
+    <color name="md_theme_surfaceContainerHigh_highContrast">#E7E8EA</color>
+    <color name="md_theme_surfaceContainerHighest_highContrast">#E1E2E4</color>
 </resources>
