detail produk perbaikan
add link, delete link, delete produk, status actif

--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -51,5 +51,6 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="myAttr">@style/Widget.MaterialComponents.Button.TextButton</item>
     </style>
 </resources>
