--- a/app/src/main/res/drawable/textview_border.xml
+++ b/app/src/main/res/drawable/textview_border.xml
@@ -3,7 +3,7 @@
         <solid android:color="@android:color/transparent"/>
         <stroke
             android:width="1dp"
-            android:color="@android:color/holo_blue_dark"/>
+            android:color="@color/md_theme_primary"/>
         <corners android:radius="4dp"/>
         <padding
             android:left="8dp"
