--- a/app/src/main/res/layout/activity_detail_product.xml
+++ b/app/src/main/res/layout/activity_detail_product.xml
@@ -84,4 +84,34 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/product_price" />
 
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/add_link"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        app:hintEnabled="true"
+        app:layout_constraintEnd_toStartOf="@+id/btn_add_link"
+        app:layout_constraintStart_toStartOf="@id/links_container"
+        app:layout_constraintTop_toBottomOf="@id/links_container">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/ed_add_link"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="start|center_vertical"
+            android:hint="Ketik Link Baru"
+            android:inputType="textEmailAddress"
+            tools:ignore="SpeakableTextPresentCheck" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <Button
+        android:id="@+id/btn_add_link"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Tambahkan"
+        app:layout_constraintTop_toTopOf="@id/add_link"
+        app:layout_constraintBottom_toBottomOf="@+id/add_link"
+        app:layout_constraintEnd_toEndOf="@id/links_container"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
